@@ -108,7 +108,7 @@ class wxbRestorePanel : public wxbPanel
       
       /* Update config */
       bool UpdateConfig(wxbDataTokenizer* dt);
-
+      
 /* Status related */
       enum status_enum
       {
@@ -130,6 +130,9 @@ class wxbRestorePanel : public wxbPanel
 /* UI related */
       bool working; // A command is running, discard GUI events
       wxTreeItemId currentTreeItem; // Currently selected tree item
+
+      /* Enable or disable config controls status */
+      void EnableConfig(bool enable);
 
 /* Event handling */
       void OnStart(wxEvent& WXUNUSED(event));
